--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext{kotlin_version = "1.3.72"
+        version_kotlin_coroutines = "1.3.7"
+        version_lifecycle = "2.2.0"
+        version_moshi = "1.9.3"
+        version_navigation = "1.0.0"
+        version_retrofit = "2.9.0"}
     repositories {
         google()
         jcenter()
