--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,23 @@ dependencies {
     // Coil
     implementation 'io.coil-kt:coil:1.1.1'
 
+    implementation 'androidx.core:core-ktx:1.0.0'
+
+    def room_version = "2.3.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    
+    def fragment_version = "1.3.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
+
 }
