--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext{kotlin_version = "1.3.72"
+    ext{kotlin_version = "1.1.16"
         version_kotlin_coroutines = "1.3.7"
         version_lifecycle = "2.2.0"
         version_arch = "2.1.0"
         version_moshi = "1.9.3"
         version_navigation = "1.0.0"
         version_retrofit = "2.9.0"}
+
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
+
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,7 +26,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
